@@ -12,8 +12,11 @@ import java.awt.event.WindowEvent;
 import java.awt.event.WindowListener;
 import java.awt.geom.AffineTransform;
 import java.io.IOException;
+import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.Random;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 
 
@@ -21,24 +24,24 @@ public class Simulation extends JPanel implements ActionListener {
 	/**
 	 * 
 	 */
-	private static final long serialVersionUID = 1L;
 	private Image car1;
 	private Image mTerrain;
-	private Timer tm = new Timer(1, this);
+	private final Timer tm = new Timer(1, this);
 	private int x = 0, velX = 2;
 	private float mAngle = 0;
+	private static final Logger logger = Logger.getLogger(Simulation.class.getName());
 	
-	private Random random = new Random();
+	private final Random random = new Random();
 	//Arrays of vehicles in each direction
-	private ArrayList<Vehicle> vehiclesRight;
-	private ArrayList<Vehicle> vehiclesDown;
-	private ArrayList<Vehicle> vehiclesLeft;
-	private ArrayList<Vehicle> vehiclesUp;
+	private final ArrayList<Vehicle> vehiclesRight;
+	private final ArrayList<Vehicle> vehiclesDown;
+	private final ArrayList<Vehicle> vehiclesLeft;
+	private final ArrayList<Vehicle> vehiclesUp;
 	
-	private String[] carImages = {"/car1.png", "/car2.png", "/car3.png", "/car4.png",
+	private final String[] carImages = {"/car1.png", "/car2.png", "/car3.png", "/car4.png",
 			"/ambulance.png", "/police.png", "/truck1.png", "/truck2.png"};
 	
-	private ArrayList<TrafficLight> trafficLights;
+	private final ArrayList<TrafficLight> trafficLights;
 	private int carSpawnTimer = 0;					//timer regulating the rate new cars are created
 	
 	Vehicle v1, v2, v3, v4;
@@ -106,7 +109,7 @@ public class Simulation extends JPanel implements ActionListener {
 		//Draw trafficLights
 		for(TrafficLight t: trafficLights){
 			//Draw the lights
-			Color colors[] = t.getCurrentLightColor();
+			Color[] colors = t.getCurrentLightColor();
 			if(t.getOrientation() == 0){
 				g2D.setColor(colors[1]);
 				g2D.fillRect(t.getForward_pos().x, t.getForward_pos().y, 21, 29);
@@ -133,7 +136,6 @@ public class Simulation extends JPanel implements ActionListener {
 	
 	
 	public void actionPerformed(ActionEvent e) {
-		// TODO Auto-generated method stub
 		carSpawnTimer++;
 		
 		if(x < 0 || x > 550)
@@ -142,10 +144,10 @@ public class Simulation extends JPanel implements ActionListener {
 		x = x + velX;
 		
 		if(mAngle < 450)
-			move +=0.2;
+			move +=0.2f;
 		else
 			move += 2;
-		steerTowards(450,120);
+		steerToward();
 		
 		
 		
@@ -153,7 +155,7 @@ public class Simulation extends JPanel implements ActionListener {
 				if(carSpawnTimer%500 == 0){
 				//create new car objects over here
 					
-					int carImageId = 0;
+					int carImageId;
 					int vAheadID = 1000;
 					for(int i = 0;i <20; i++){
 						if(vehiclesRight.size() < 30){
@@ -161,26 +163,14 @@ public class Simulation extends JPanel implements ActionListener {
 							//int laneID = vehiclesLeft.size()%3;
 							
 							if(line > 0){
-								/*switch(laneID){
-								case 0:
-									vAheadID = 3*line - 3;
-									break;
-								case 1:
-									vAheadID = 3*line - 2;
-									break;
-								case 2:
-									vAheadID = 3*line - 1;
-									break;
-								}*/
+
 								
 								vAheadID = vehiclesRight.size() - 3;
 							}
 							carImageId = random.nextInt(carImages.length);
-							if(carImageId < 0){
-								carImageId = 0;
-							}
+
 							//int spd = 7- random.nextInt(2);
-							if(vehiclesRight.size() > 0 && vAheadID < vehiclesRight.size())
+							if(!vehiclesRight.isEmpty() && vAheadID < vehiclesRight.size())
 								vehiclesRight.add(new Vehicle(getClass().getResourceAsStream(carImages[carImageId]), 6, VehicleState.MOVE_X, VehicleDirection.RIGHT, trafficLights.get(1), this, vehiclesRight.get(vAheadID), vehiclesRight.size()));
 							else
 								vehiclesRight.add(new Vehicle(getClass().getResourceAsStream(carImages[carImageId]), 6, VehicleState.MOVE_X, VehicleDirection.RIGHT, trafficLights.get(1), this, null, vehiclesRight.size()));
@@ -192,31 +182,25 @@ public class Simulation extends JPanel implements ActionListener {
 							int laneID = vehiclesDown.size()%3;
 							
 							if(line > 0){
-								switch(laneID){
-								case 0:
-									vAheadID = 3*line - 3;
-									break;
-								case 1:
-									vAheadID = 3*line - 2;
-									break;
-								case 2:
-									vAheadID = 3*line - 1;
-									break;
-								}
-								
+								vAheadID = switch(laneID){
+									case 0 -> 3 * line - 3;
+									case 1 -> 3 * line - 2;
+									case 2 -> 3 * line - 1;
+									default -> throw new IllegalStateException("Unexpected value: " + laneID);
+								};
+
+
 								//vAheadID = vehiclesDown.size() - 3;
 							}
 							
 							carImageId = random.nextInt(carImages.length);
-							if(carImageId < 0){
-								carImageId = 0;
-							}
+
 							int spd = 7- random.nextInt(2);
 							//System.out.println("line: " +line + " vehicle: "+vehiclesDown.size() + "vAheadId: " +vAheadID);
-							if(vehiclesDown.size() > 0 && vAheadID < vehiclesDown.size())
-								vehiclesDown.add(new Vehicle(getClass().getResourceAsStream(carImages[carImageId]), spd, VehicleState.MOVE_Y, VehicleDirection.DOWN, trafficLights.get(0), this, vehiclesDown.get(vAheadID), vehiclesDown.size()));
+							if(!vehiclesDown.isEmpty() && vAheadID < vehiclesDown.size())
+								vehiclesDown.add(new Vehicle(getClass().getResourceAsStream(carImages[carImageId]), spd, VehicleState.MOVE_Y, VehicleDirection.DOWN, trafficLights.getFirst(), this, vehiclesDown.get(vAheadID), vehiclesDown.size()));
 							else
-								vehiclesDown.add(new Vehicle(getClass().getResourceAsStream(carImages[carImageId]), spd, VehicleState.MOVE_Y, VehicleDirection.DOWN, trafficLights.get(0), this, null, vehiclesDown.size()));
+								vehiclesDown.add(new Vehicle(getClass().getResourceAsStream(carImages[carImageId]), spd, VehicleState.MOVE_Y, VehicleDirection.DOWN, trafficLights.getFirst(), this, null, vehiclesDown.size()));
 						}
 						
 						if(vehiclesLeft.size() < 30){
@@ -224,27 +208,21 @@ public class Simulation extends JPanel implements ActionListener {
 							int laneID = vehiclesLeft.size()%3;
 							
 							if(line > 0){
-								switch(laneID){
-								case 0:
-									vAheadID = 3*line - 3;
-									break;
-								case 1:
-									vAheadID = 3*line - 2;
-									break;
-								case 2:
-									vAheadID = 3*line - 1;
-									break;
-								}
-								
+								vAheadID = switch(laneID){
+									case 0 -> 3 * line - 3;
+									case 1 -> 3 * line - 2;
+									case 2 -> 3 * line - 1;
+									default -> throw new IllegalArgumentException("Unexpected laneID: " + laneID);
+								};
+
+
 								//vAheadID = vehiclesLeft.size() - 3;
 							}
 							carImageId = random.nextInt(carImages.length);
-							if(carImageId < 0){
-								carImageId = 0;
-							}
+
 							int spd = 7- random.nextInt(2);
 							//System.out.println("vAheadID: " +vAheadID + "carImageId: "+carImageId + "vehicles: " + vehiclesLeft.size());
-							if(vehiclesLeft.size() > 0 && vAheadID < vehiclesLeft.size())
+							if(!vehiclesLeft.isEmpty() && vAheadID < vehiclesLeft.size())
 								vehiclesLeft.add(new Vehicle(getClass().getResourceAsStream(carImages[carImageId]), spd, VehicleState.MOVE_X, VehicleDirection.LEFT, trafficLights.get(3),this, vehiclesLeft.get(vAheadID), vehiclesLeft.size()));
 							else
 								vehiclesLeft.add(new Vehicle(getClass().getResourceAsStream(carImages[carImageId]), spd, VehicleState.MOVE_X, VehicleDirection.LEFT, trafficLights.get(3),this, null, vehiclesLeft.size()));
@@ -256,26 +234,14 @@ public class Simulation extends JPanel implements ActionListener {
 							//int laneID = vehiclesUp.size()%3;
 							
 							if(line > 0){
-								/*switch(laneID){
-								case 0:
-									vAheadID = 3*line - 3;
-									break;
-								case 1:
-									vAheadID = 3*line - 2;
-									break;
-								case 2:
-									vAheadID = 3*line - 1;
-									break;
-								}*/
+
 								
 								vAheadID = vehiclesUp.size() - 3;
 							}
 							carImageId = random.nextInt(carImages.length);
-							if(carImageId < 0){
-								carImageId = 0;
-							}
+
 							int spd = 7- random.nextInt(2);
-							if(vehiclesUp.size() > 0 && vAheadID < vehiclesUp.size())
+							if(!vehiclesUp.isEmpty() && vAheadID < vehiclesUp.size())
 								vehiclesUp.add(new Vehicle(getClass().getResourceAsStream(carImages[carImageId]), spd, VehicleState.MOVE_Y, VehicleDirection.UP, trafficLights.get(2),this, vehiclesUp.get(vAheadID), vehiclesUp.size()));
 							else
 								vehiclesUp.add(new Vehicle(getClass().getResourceAsStream(carImages[carImageId]), spd, VehicleState.MOVE_Y, VehicleDirection.UP, trafficLights.get(2),this, null, vehiclesUp.size()));
@@ -287,12 +253,15 @@ public class Simulation extends JPanel implements ActionListener {
 		
 		repaint();
 	}
-	
+
+	private void steerToward() {
+	}
+
 	//simple function to test our steering
-	/** 
-	 * @param angle the final angle you want the car to positioned at relative to the normal
-	 * @param time the time in seconds you want the car to take to position itself at "angle"*/
-	private void steerTowards(float angle, float t){
+
+	private void steerTowards(){
+		float angle = 450;
+		float t = 120;
 		//first we calculate the angular velocity required to get the vehicle to angle in time t
 		float angularVel = angle/t;
 		
@@ -339,19 +308,28 @@ public class Simulation extends JPanel implements ActionListener {
 		vehiclesDown = new ArrayList<Vehicle>();
 		vehiclesUp = new ArrayList<Vehicle>();
 		vehiclesRight.add(v1); vehiclesDown.add(v2); vehiclesLeft.add(v3); vehiclesUp.add(v4);
-		
+
+
 		
 		try {
-			car1 = ImageIO.read(getClass().getResourceAsStream("/car1.jpg"));
-			mTerrain = ImageIO.read(getClass().getResourceAsStream("/road1.jpg"));
+			InputStream car1Stream = getClass().getResourceAsStream("/car1.jpg");
+			if (car1Stream == null) {
+				throw new IOException("Resource not found: /car1.jpg");
+			}
+			car1 = ImageIO.read(car1Stream);
+
+			InputStream terrainStream = getClass().getResourceAsStream("/road1.jpg");
+			if (terrainStream == null) {
+				throw new IOException("Resource not found: /road1.jpg");
+			}
+			mTerrain = ImageIO.read(terrainStream);
 		} catch (IOException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
+			logger.log(Level.SEVERE, "Error loading image", e);
 		}
 
 	}
 	
-	public static void main(String args[]){
+	public static void main(String[] args){
 	
 		JFrame jF = new JFrame("Traffic Simulation");
 		Simulation sim = new Simulation();
